--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -134,7 +134,7 @@ input[type=checkbox], input[type=radio]{width:auto;}
 nav{text-align: center;padding: 5px 0; margin: 10px 0;}
 header h1{border:2px solid #ccc; padding:3px 10px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
 #search_results .item_info{margin-top: 5px}
-#main{padding:10px;-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); background:#fff;min-height:100%;border-color: #E5E5E5 #DBDBDB #D2D2D2; border-width: 1px;border-style: solid;}
+#main{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;padding:10px;-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); background:#fff;min-height:100%;border-color: #E5E5E5 #DBDBDB #D2D2D2; border-width: 1px;border-style: solid;}
 #main .headings{background-color: #eee; border-top: 1px solid #ddd; margin-bottom: 5px; font-size: 14px;padding: 2px 10px}
 #main .a_margy {margin-top: 10px}
 #photos_videos ul{list-style: none;}
